@@ -31,7 +31,10 @@
     </panel>
     <panel colspan="2" name="Timeout" visible="false">
         <label i18n="true" text="newgame.label.timeout" weightx="1"/>
-        <combobox selected="0" editable="false" name="TimeoutValue">
+        <combobox selected="3" editable="false" name="TimeoutValue">
+            <choice i18n="true" text="newgame.timeout.10sec" name="10"/>
+            <choice i18n="true" text="newgame.timeout.20sec" name="20"/>
+            <choice i18n="true" text="newgame.timeout.30sec" name="30"/>
             <choice i18n="true" text="newgame.timeout.1min" name="60"/>
             <choice i18n="true" text="newgame.timeout.5min" name="300"/>
             <choice i18n="true" text="newgame.timeout.10min" name="600"/>
